--- a/app/assets/index.ejs
+++ b/app/assets/index.ejs
@@ -11,7 +11,7 @@
     <link href='./lib/cms/css/material-dashboard.css?v=1.2.0' rel='stylesheet' type='text/css' >
     <link href='./lib/cms/css/demo.css' rel='stylesheet' type='text/css' >
     <link href='./lib/cms/css/custom.css' rel='stylesheet' type='text/css' >
-    <title>CMS Restaurant</title>
+    <title>Nhân viên phục vụ</title>
   </head>
   <body class='login-bg'>
     <div id='website'>
