--- a/app/styles/website.less
+++ b/app/styles/website.less
@@ -223,3 +223,13 @@ body {
   border-right: 2px dashed #ffd984;
   border-bottom: 2px dashed #ffd984;
 }
+
+.sub-item {
+
+}
+
+@media screen and (max-width: 991px) {
+  .sidebar::before, .off-canvas-sidebar::before {
+    background-color: transparent;
+  }
+}
