Fixed UI Sidebar

--- a/app/styles/website.less
+++ b/app/styles/website.less
@@ -1,235 +1,238 @@
 body {
-  padding: 0;
-  margin: 0;  
-  font-family: 'Roboto', sans-serif;
+    padding: 0;
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
 }
 
-.textHover:hover {
-  color: #f5a300 !important;
+.table-container {
+    height: 80vh;
+    border: 2px solid black
 }
 
-.desktop-menu-bar li.open>a{
-  background: #f9ba3b !important;
+.table-container>div {
+    display: inline-block;
 }
 
-.desktop-menu-bar li a {
-  font-weight: bold;
-  color: #ffffff !important;
-  text-transform: uppercase;
+.table-container>.table {
+    width: auto;
+    height: auto;
+    display: inline-block;
 }
 
-.desktop-menu-bar li a:hover {
-  background: #f9ba3b !important;
+.table-container>.table .table-wrapper {
+    width: 200px;
+    height: 150px;
+    background: center no-repeat;
+    background-size: cover;
+    display: flex;
+    margin: 20px 5px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center
 }
 
-.desktop-menu-bar li ul{
-  background: #f5a300;
-  border: none;
+.table-container>.table .table-wrapper .table-status {
+    text-align: center;
+    background: green;
+    color: white;
+    padding: 2px 15px;
+    border-radius: 20px;
 }
 
-.table-container{height: 80vh;border:2px solid black}
-.table-container>div{
-  display:inline-block;
+.table-container>.table .table-wrapper .table-name {
+    text-align: center;
+    background: rgb(0, 188, 212);
+    color: white;
+    margin-bottom: 10px;
+    padding: 2px 15px;
+    border-radius: 20px;
 }
-
-.table-container > .table{
-  width: auto;
-  height: auto;
-  display: inline-block;
-}
-
-.table-container > .table .table-wrapper{
-  width:200px;
-  height:150px;
-  background:center no-repeat;
-  background-size:cover;
-  display:flex;
-  margin:20px 5px;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center
-}
-
-.table-container > .table .table-wrapper .table-status{
-  text-align:center;
-  background: green;
-  color: white;
-  padding: 2px 15px;
-  border-radius: 20px;
-}
-
-.table-container > .table .table-wrapper .table-name{
-  text-align:center;
-  background: rgb(0, 188, 212);
-  color: white;
-  margin-bottom: 10px;
-  padding: 2px 15px;
-  border-radius: 20px;
-}
-
 
 .resize-drag {
-  background-color: #29e;
-  color: white;
-  font-size: 20px;
-  font-family: sans-serif;
-  border-radius: 8px;
-  padding: 20px;
-  margin: 30px 20px;
-
-  width: 120px;
-
-  /* This makes things *much* easier */
-  box-sizing: border-box;
+    background-color: #29e;
+    color: white;
+    font-size: 20px;
+    font-family: sans-serif;
+    border-radius: 8px;
+    padding: 20px;
+    margin: 30px 20px;
+    width: 120px;
+    /* This makes things *much* easier */
+    box-sizing: border-box;
 }
 
 .resize-container {
-  display: inline-block;
-  width: 100%;
-  height: 240px;
+    display: inline-block;
+    width: 100%;
+    height: 240px;
 }
 
-.react-draggable, .cursor {
-  cursor: move;
+.react-draggable,
+.cursor {
+    cursor: move;
 }
+
 .no-cursor {
-  cursor: auto;
+    cursor: auto;
 }
+
 .cursor-y {
-  cursor: ns-resize;
+    cursor: ns-resize;
 }
+
 .cursor-x {
-  cursor: ew-resize;
+    cursor: ew-resize;
 }
+
 .react-draggable strong {
-  background: #ddd;
-  border: 1px solid #999;
-  border-radius: 3px;
-  display: block;
-  margin-bottom: 10px;
-  padding: 3px 5px;
-  text-align: center;
+    background: #ddd;
+    border: 1px solid #999;
+    border-radius: 3px;
+    display: block;
+    margin-bottom: 10px;
+    padding: 3px 5px;
+    text-align: center;
 }
+
 .box {
-  background: #fff;
-  border: 1px solid #999;
-  border-radius: 3px;
-  width: 180px;
-  height: 180px;
-  margin: 10px;
-  padding: 10px;
-  float: left;
+    background: #fff;
+    border: 1px solid #999;
+    border-radius: 3px;
+    width: 180px;
+    height: 180px;
+    margin: 10px;
+    padding: 10px;
+    float: left;
 }
 
 // menu
 .button-view-order {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  background-color: #005238;
-  position: fixed;
-  top: 35%;
-  right: 10px;
-  cursor: pointer;
-  font-size: 20px;
-  padding-top: 35px;
-  font-weight: bold;
-  opacity: 0.9;
-
-  -webkit-transition: box-shadow 0.2s ease;
-  -moz-transition: box-shadow 0.2s ease;
-  transition: box-shadow 0.2s ease;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  border-radius: 50%;
-  color: #fff;
-  display: inline-block;
-  text-align: center;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: #005238;
+    position: fixed;
+    top: 35%;
+    right: 10px;
+    cursor: pointer;
+    font-size: 20px;
+    padding-top: 35px;
+    font-weight: bold;
+    opacity: 0.9;
+    -webkit-transition: box-shadow 0.2s ease;
+    -moz-transition: box-shadow 0.2s ease;
+    transition: box-shadow 0.2s ease;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    border-radius: 50%;
+    color: #fff;
+    display: inline-block;
+    text-align: center;
 }
 
 .button-order {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  background-color: #005238;
-  position: fixed;
-  top: 50%;
-  right: 10px;
-  cursor: pointer;
-  font-size: 20px;
-  padding-top: 35px;
-  font-weight: bold;
-  opacity: 0.9;
-
-  -webkit-transition: box-shadow 0.2s ease;
-  -moz-transition: box-shadow 0.2s ease;
-  transition: box-shadow 0.2s ease;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  border-radius: 50%;
-  color: #fff;
-  display: inline-block;
-  text-align: center;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: #005238;
+    position: fixed;
+    top: 50%;
+    right: 10px;
+    cursor: pointer;
+    font-size: 20px;
+    padding-top: 35px;
+    font-weight: bold;
+    opacity: 0.9;
+    -webkit-transition: box-shadow 0.2s ease;
+    -moz-transition: box-shadow 0.2s ease;
+    transition: box-shadow 0.2s ease;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    border-radius: 50%;
+    color: #fff;
+    display: inline-block;
+    text-align: center;
 }
 
 .button-view-order:hover,
 .button-order:hover {
-  box-shadow: 0 0 0 7px #97824b;
+    box-shadow: 0 0 0 7px #97824b;
 }
 
 .button-view-order:hover:before,
 .button-order:hover:before {
-  -webkit-transform: scale(0.925);
-  -moz-transform: scale(0.925);
-  -ms-transform: scale(0.925);
-  -o-transform: scale(0.925);
-  transform: scale(0.925);
-  box-shadow: 0 0 0 1px #97824b;
-  opacity: .5;
+    -webkit-transform: scale(0.925);
+    -moz-transform: scale(0.925);
+    -ms-transform: scale(0.925);
+    -o-transform: scale(0.925);
+    transform: scale(0.925);
+    box-shadow: 0 0 0 1px #97824b;
+    opacity: .5;
 }
 
 .button-view-order:before,
 .button-order:before {
-  -webkit-transition: all 0.2s ease;
-  -moz-transition: all 0.2s ease;
-  transition: all 0.2s ease;
-  border-radius: 50%;
-  bottom: 0;
-  box-shadow: 0 0 0 1px #97824b;
-  content: '';
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
+    -webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    transition: all 0.2s ease;
+    border-radius: 50%;
+    bottom: 0;
+    box-shadow: 0 0 0 1px #97824b;
+    content: '';
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
 }
 
 .number-order {
-  color: #005238;
-  margin: 10px 0;
+    color: #005238;
+    margin: 10px 0;
 }
 
 .number-order i {
-  margin: 0 15px;
+    margin: 0 15px;
 }
 
 .number-order span {
-  font-size: 25px;
-  font-weight: bold;
-  margin: 0 10px;
+    font-size: 25px;
+    font-weight: bold;
+    margin: 0 10px;
+}
+
+.food-item {
+    border-right: 2px dashed #ffd984;
+    border-bottom: 2px dashed #ffd984;
+}
+
+.sidebar .nav li:first-child>a,
+.off-canvas-sidebar .nav li:first-child>a {
+    margin: 10px 15px 0;
+}
+
+.sidebar {
+  .sub-menu {
+    padding-left: 0;
+    li {
+        list-style-type: none;
+        display: flex;
+        width: 100%;
+        a {
+            padding: 5px 20px;
+            width: 100%;
+            span {
+                line-height: 33px;
+            }
+        }
+    }
+}
 }
 
 
-.food-item{
-  border-right: 2px dashed #ffd984;
-  border-bottom: 2px dashed #ffd984;
-}
-
-.sub-item {
-
-}
 
 @media screen and (max-width: 991px) {
-  .sidebar::before, .off-canvas-sidebar::before {
-    background-color: transparent;
-  }
+    .sidebar::before,
+    .off-canvas-sidebar::before {
+        background-color: transparent;
+    }
 }
