update button cart

--- a/app/styles/website.less
+++ b/app/styles/website.less
@@ -107,7 +107,7 @@ body {
 
 // menu
 .button-view-order {
-    width: 100px;
+    width: auto;
     height: 100px;
     background: linear-gradient(60deg, #66bb6a, #43a047);
     box-shadow: 0 12px 20px -10px rgba(76, 175, 80, 0.28), 0 4px 20px 0px rgba(0, 0, 0, 0.12), 0 7px 8px -5px rgba(76, 175, 80, 0.2);
