--- a/app/styles/website.less
+++ b/app/styles/website.less
@@ -148,6 +148,13 @@ body {
     border-bottom: 2px dashed #ffd984;
 }
 
+.number-order span { 
+    font-size: 25px; 
+    font-weight: bold; 
+    margin: 0 10px; 
+    right: 15px; 
+} 
+
 .sidebar .nav li:first-child>a,
 .off-canvas-sidebar .nav li:first-child>a {
     margin: 10px 15px 0;
