--- a/app/styles/website.less
+++ b/app/styles/website.less
@@ -189,3 +189,15 @@ body {
     background: #26c6da;
     color: white
 }
+
+.button-confirm-food{
+    background: green !important;
+}
+
+.button-done-food{
+    background: #26c6da !important;
+}
+
+.button-delete-food{
+    background: red !important;
+}
