--- a/app/styles/website.less
+++ b/app/styles/website.less
@@ -162,7 +162,8 @@ body {
 
 .sidebar {
     .sub-menu {
-        padding-left: 0;
+        padding: 0 10px;
+        margin-top: -10px;
         li {
             list-style-type: none;
             display: flex;
