--- a/app/styles/website.less
+++ b/app/styles/website.less
@@ -146,6 +146,7 @@ body {
 .food-item {
     border-right: 2px dashed #ffd984;
     border-bottom: 2px dashed #ffd984;
+    margin-top: 15px;
 }
 
 .number-order span { 
