--- a/app/styles/website.less
+++ b/app/styles/website.less
@@ -4,6 +4,17 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+@media (min-width: 992px){
+    .modal .modal-dialog{
+        margin-top: 10px;
+    }
+    .modal-lg {
+        width: 80%;
+    }
+}
+
+
+
 .table-container {
     height: 80vh;
     border: 2px solid black
